Added information gain figures

--- a/PlanningWithDynamicsAndUncertainty.ipynb
+++ b/PlanningWithDynamicsAndUncertainty.ipynb
@@ -23102,7 +23102,7 @@
     "goals, picking the one that best balances the value of information, overall task achievement, and\n",
     "movement cost.\n",
     "\n",
-    "#### Pure information gathering\n",
+    "#### Pure information gathering: next best view planning\n",
     "\n",
     "Let us first consider the problem of map-building, which is a pure information gathering problem. Let\n",
     "us assume a 2D problem with a mobile robot with a configuration space $\\mathcal{C}$ in SE(3), with configuration $q=(x,y,\\theta)$.  Let $M$ be a partial map, given by a 2D probabilistic occupancy grid.  The map defines\n",
@@ -23112,38 +23112,66 @@
     "\n",
     "Suppose the robot has a sweeping laser sensor mounted on its center, pointed in its forward direction, and it has\n",
     "an angular range of $\\pm \\theta_{max}$. Each scan provides $N$ readings within the angular range, and the maximum\n",
-    "distance is $d_{max}$.  Using this sensor model, we can predict how much of the map's unexplored boundary can be sensed from a new configuration $q$.\n",
+    "distance is $d_{max}$.  Using this sensor model, we can predict how much of the map's unexplored boundary can be sensed from a new configuration $q$. The problem of finding the best viewpoint to aid exploration is also known as the **next best view** planning problem. \n",
     "\n",
-    "At $q$, each laser scan ray emanates from $(x,y)$ with heading $\\theta + \\theta_{laser,i}$, with $\\theta_{laser,i} = -\\theta_{max} + 2 (i-1) / (N-1) \\theta{max}$, for $i=1,\\ldots,N$.  At points $p_1,p_2,...,$ along this ray, we walk along the occupancy grid, up to distance $d_{max}$, and evaluate the contents of the map $M(p_j)$.  If we meet a point that is occupied or unknown ($M(p_j)=0.5$ or 1), we stop.  If we stop only by hitting the robot's sensor range $d_{max}$, or $M(p_j)$ is occupied, then the ray is not expected to provide any information at $q$.  If $M(p_j)$ is unknown, then we can expect for this ray to provide the robot with new information about the shape of the map.  As a result, we can define an information gain score as:\n",
+    "At $q$, each laser scan ray emanates from $(x,y)$ with heading $\\theta + \\theta_{laser,i}$, with $\\theta_{laser,i} = -\\theta_{max} + 2 (i-1) / (N-1) \\theta{max}$, for $i=1,\\ldots,N$.  At points $p_1,p_2,...,$ along this ray, we walk along the occupancy grid, up to distance $d_{max}$, and evaluate the contents of the map $M(p_j)$.  If we meet a point that is occupied or unknown ($M(p_j)=0.5$ or 1), we stop.  If we stop only by hitting the robot's sensor range $d_{max}$, or $M(p_j)$ is occupied, then the ray is not expected to provide any information at $q$.  If $M(p_j)$ is unknown, then we can expect for this ray to provide the robot with new information about the shape of the map.  For ray $i$ define $h_i=p_j$ if the ray hits an unknown cell, and $nil$ otherwise. As a result, we can define an information gain score as:\n",
     "\n",
-    "$$f_{inf}(q) = \\text{# of rays that see an unknown cell at }q.$$\n",
+    "$$f_{inf}(q) = \\text{# of rays that terminate in an *unknown* cell at }q = \\sum_i I[h_i \\neq nil].$$\n",
     "\n",
-    "In essence, this score says that each ray that hits an unknown cell gives 1 unit of information, and rays that hit obstacles or terminate at the max sensor range give 0 units. A slight refinement of this score might promote the robot to get closer to the unknown cells so that more free space could potentially be added to the map.  For example, if a ray sees an unknown cell, we could contribute $d_{max} - \\|p_j - (x,y)\\|$ to the score as an optimistic guess that the ray would be completely clear at that point.\n",
+    "In essence, this score says that each ray that hits an unknown cell gives 1 unit of information, and rays that hit obstacles or terminate at the max sensor range give 0 units.\n",
+    "\n",
+    "A slight refinement of this score might consider the distance of the robot to  unknown cells.  There is a tradeoff between getting closer vs farther. If you are closer, the new view could add more free space  to the map.  For example, if the viewpoint were to see completely free space behind the unknown cell, then the robot would be able to see past the frontier a distance of $d_{max} - \\|h_i - (x,y)\\|$.  On the other hand, if the robot gets too close to an unexplored boundary, then its view will occupy a relatively small area of that boundary. Each such ray contributes approximately $\\frac{2\\theta_{max}}{N} \\| h_i- (x,y)\\|$ to the area of the unexplored boundary. A proper weighting will trade off between getting too close and too far, and hence it is worth picking an ideal distance $d_{ideal}$ and setting the score to fall off when deviating from the ideal distance, e.g., $f_{inf}(q) = \\sum_i I[h_i\\neq nil] (d_{ideal} - d_{max})^2-(d_{ideal} - \\| h_i - (x,y)\\|)^2$.\n",
+    "\n",
+    "**************************\n",
+    "<a name=\"fig:InformationGain\"></a>\n",
+    "    \n",
+    "<img alt=\"fig:InformationGain\" src=\"figures/planning/information_gain.png\">\n",
+    "\n",
+    "<div class=\"figcaption\"><b>Figure 18</b>. Left: For mapping an unknown 2D environment with a laser sensor, a reasonable definition of information gain for a target viewpoint is the number of rays that terminate in an \"unknown\" cell (indicated in orange). Viewpoint (b) has higher information gain than viewpoint (a).  Right: <i>Information gain rate</i> divides the information gain of a viewpoint by the cost of the path to reach it from the current configuration (blue). Viewpoints (c) and (d) are closer to the start and have higher information gain rate than viewpoint (b).\n",
+    "</div>\n",
+    "\n",
+    "**************************\n",
     "\n",
     "In any case, this score can now be used for planning.  Any configuration with nonzero $f_{inf}(q)$ is now a candidate for a goal, which means we have a *goal set* rather than a single configuration.  Moreover, we need to pick amongst the goals, and trade off between configurations that are nearby vs those with high $f_{inf}(q)$.  Let $f_{move}(y)$ be the movement cost of a path $y:[0,T] \\rightarrow \\mathcal{F}$.  We would like to find paths that have high $f_{inf}$ at the terminal state and low $f_{move}$.  One straightforward approach is to define the score of a path $y$ as the *rate of information gain*, \n",
     "$$s(y) = f_{inf}(y(T)) / f_{move}(y),$$\n",
     "with higher values better.\n",
     "\n",
-    "Note that this cost is *not additive*, which means that it cannot be expressed as a standard sum of edge costs in a graph $G$.  But, the maximum score over all paths to some goal configuration $q$ is equal to $\\max_{y\\in G |y(T)=q} s(y) = f_{inf}(q) / g^*(q_{cur},q)$, where $g^*(q_{cur},q)$ is the shortest path from $q_{cur}$ to $q$.  Hence, we can solve this problem by the following two-step procedure:\n",
-    "1. Create a graph $G=(V,E)$ using some roadmap method (a grid or a PRM). Search the graph to produce shortest paths $g^*(q)$ to all vertices $q\\in V$.\n",
-    "2. Loop over all vertices to find the goal $q$ with maximum  $f_{inf}(q)/g^*(q)$. Output the shortest path to the best goal.\n",
+    "The information gain rate score is *not additive*, which means that it cannot be expressed as a standard sum of edge costs in a graph $G$.  But, the maximum score over all paths to some goal configuration $q$ is equal to $\\max_{y\\in G |y(T)=q} s(y) = f_{inf}(q) / g^*(q)$, where $g^*(q)$ is the shortest path from the current configuration $q_{cur}$ to $q$.  Hence, we can solve this problem by the following three-step procedure:\n",
+    "1. Generate a set of *candidate viewpoints* that have nonzero information gain. As an example, we could compute the set of \"frontier\" cells that are unobserved but next to a free cell. To sample a viewpoint, we would sample a free cell, then sample one or more configurations in free space near and pointing toward the cell.  \n",
+    "2. Create a graph $G=(V,E)$ using some roadmap method (a grid or a PRM). Ensure that $V$ contains all candidate viewpoints.  Search the graph to produce shortest paths $g^*(q)$ to all vertices $q\\in V$.\n",
+    "3. Loop over all candidate viewpoints to find the goal $q$ with maximum  $f_{inf}(q)/g^*(q)$. Output the shortest path to the best goal.\n",
     "\n",
-    "If there are no goal nodes with positive rate of information gain, then either there is no more unexplored area in the map, or the resolution of the graph was not set finely enough. \n",
+    "If there are no candidate viewpoints with positive information gain, then either there is no more unexplored area in the map, or viewpoints were note sampled densely enough. \n",
     "\n",
-    "Note that this approach generates high-quality paths given the current state of information, but only assesses how much information can be gathered at a single goal state.  As a result, it is referred to as a *greedy information-gain* approach.  In this example, there is no information loss, and the robot will never reach a dead-end from which it cannot escape, so greedy information gain will indeed suffice to build the map.  \n",
+    "Next-best-view (NBV) planning is widely used by indoor mobile robots to map buildings. 3D variants have been used for robots that scan 3D models of objects with an eye-in-hand camera, and for drones or underwater robots to inspect 3D structures.  3D poses computational challenges to sample high-quality viewpoints, to evaluate the information gain score efficiently, and to account for motion constraints during planning.\n",
     "\n",
-    "TODO: Figure 18: illustrate greedy information gain / poor cases \n",
+    "Note that the approach outlined above generates high-quality paths given the current state of information, but only assesses how much information can be gathered at a single goal state.  As a result, it is referred to as a *greedy information-gain* strategy.  Moving to a viewpoint causes no information loss, and the robot will never reach a dead-end from which it cannot escape, so greedy information gain will indeed suffice to build the map.  \n",
     "\n",
-    "However, greedy information gain may not be the most efficient approach, as there may be sequences of information-gain actions that are more efficient at acquiring information in the long run. An example is illustrated below. \n",
-    "More sophisticated searches can consider multiple information-gathering actions, but also need to model how the each information-gathering step changes the robot's information state.  \n",
+    "However, greedy information gain may not be the most efficient approach, as 1) the robot may continually acquire information along a path, or 2) there may be sequences of information-gain actions that are more efficient at acquiring information in the long run. An example of case (1) is illustrated below.    \n",
+    "\n",
+    "**************************\n",
+    "<a name=\"fig:InformationGainNongreedy\"></a>\n",
+    "    \n",
+    "<img alt=\"fig:InformationGainNongreedy\" src=\"figures/planning/information_gain_nongreedy.svg\" width=\"70%\">\n",
+    "\n",
+    "<div class=\"figcaption\"><b>Figure 19</b>. Left: if only the information gain rate for the terminal configuration is considered, then viewpoint (a) is better than viewpoint (b). Right: if the robot were to consider information gained along the entire path, then the path to reach viewpoint (b) is better than the path to reach viewpoint (a).\n",
+    "</div>\n",
+    "\n",
+    "**************************\n",
+    "\n",
+    "In order to address this case in the NBV framework, we could do a better job of assessing the information gain along the minimum-cost path to a target viewpoint by evaluating rays at all views that would be encountered along the path.  That step would be a modification of step 3 in which we would evaluate $f_{inf}$ over the entire optimal path, $y^*(q)$, rather than just the target viewpoint.  However, this method is still constrained to using the minimum cost path, and would not allow the robot to deviate from the path to gather extra information on its way to the target (e.g., \"peeking\" into the gaps in the lower hallway on its way to viewpoint (b)).  More sophisticated methods can consider optimizing sequences of information-gathering actions, which requires combinatorial reasoning in a manner reminiscent of traveling salesman problems. Such a planner would also need to model how the each information-gathering step changes the robot's information state.\n",
+    "\n",
     "\n",
     "#### Mixed information gathering and task achievement\n",
     "\n",
-    "In a more complex task, a robot may need to trade off between acquiring information needed to complete the task and accomplishing the task itself.  To find a professor's office in a new building, a student would either find a directory or a receptionist, find the office number, possibly ask for directions, and then seek the office.  A robot in pure information-gain mode would start by mapping out the entire building!  In this case, the robot should be able to determine 1) is there enough information to complete the task, 2) if the task can only be achieved partially or probabilistically, should I continue gathering information or attempt to complete some of the task? \n",
+    "In a more complex task, a robot may need to trade off between acquiring information needed to complete the task and accomplishing the task itself.  To find a professor's office in a new building, a student would either find a directory or a receptionist, find the office number, possibly ask for directions, and then seek the office.  A robot in pure information-gain mode would start by mapping out the entire building! \n",
     "\n",
-    "Deciding what to do in the first case can be addressed by a simple heuristic; if there is no chance to complete the task with the current information, perform information gathering.  As soon as enough information is available to complete the task, do it.  This heuristic performs adequately in some cases, but it does not *direct its information gathering toward accomplishing the task*.  If you lost a contact lens, would it make sense to start mapping out the walls?\n",
+    "To do better, the robot should be able to determine 1) is there enough information to complete the task, 2) if the task can only be achieved partially or probabilistically, should I continue gathering information or attempt to complete some of the task? \n",
+    "In some cases, addressing the first issue can be addressed by a simple heuristic; if there is no chance to complete the task with the current information, perform information gathering.  As soon as enough information is available to complete the task, do it.  This heuristic performs adequately in some cases, but it does not *direct its information gathering toward accomplishing the task*.  If you lost a contact lens, would it make sense to start mapping out the walls?\n",
     "\n",
-    "The strategy of *task-driven* information gain requires defining a new score that takes the likelihood of task achievement into account rather than the mere quantity of information gathered. For most problem settings this likelihood cannot be evaluated analytically, since it would, in essense, involve solving a planning problem for every possible world (see [the section below](#Information-space-and-many-worlds-interpretation)). Instead, task-relevance"
+    "The strategy of *task-driven* information gain requires defining a new score that takes the likelihood of task achievement into account rather than the mere quantity of information gathered. For most problem settings this likelihood cannot be evaluated analytically, since it would, in essence, involve solving a planning problem for every possible world (see [the section below](#Information-space-and-many-worlds-interpretation)). However, if we can assess whether some information would be relevant to a task, then we can define a *task relevance* weighting to our information gain scoring scheme to apply standard NBV-style planning to solve the problem.\n",
+    "\n",
+    "As an example, suppose that our robot's task is to identify and grasp an isolated box of a certain dimension $w \\times h$ which is somewhere in the environment but the robot does not know where it is. Suppose the robot has a box detector that could operate on all occupied cells. A non-task-driven approach could simply invoke the box detector every time we added information to the map to see whether the box has been detected. If it hasn't, just keep mapping.  In contrast, a task-driven approach could assess for each viewpoint whether the box might be seen from the viewpoint. If a part of the known boundary near the viewpoint contains a box-like feature such as a corner, or the potential unexplored area contains enough contiguous area to contain the box, then the score of the viewpoint should be boosted due to high task relevance. Although this may be somewhat of a contrived example, methods for assessing task-relevance are varied in the ways that they improve task performance.  For example, in object goal navigation (i.e., finding a target object in a house) it may be helpful to use contextual labeling to determine which rooms to explore (e.g., a spatula is more likely to be found in a kitchen than a bathroom).  Also, for inspecting large objects for damage, it is helpful to have a prior distribution of where the faults are likely to occur to produce earlier and denser coverage of such viewpoints (e.g., damage to a bridge is more likely observable in support structures and at fasteners). "
    ]
   },
   {
@@ -23181,7 +23209,7 @@
     "$$ IG(x;y) = H(P(x)) - H(P(x|y)) $$\n",
     "where $x$ is the state of the world, $y$ is an observation, $H$ is the entropy of a probability distribution, $P(x)$ is the prior distribution over worlds, and $P(x|y)$ is the posterior distribution over worlds.  \n",
     "\n",
-    "TODO: Figure 19:\n",
+    "TODO: Figure 20:\n",
     "\n",
     "In general, the study of information-space planning starts with the partially-observable Markov Decision Process (POMDP) model."
    ]
