Updated the dynamics chapter to include controlled integration.

--- a/Calibration.ipynb
+++ b/Calibration.ipynb
@@ -6347,6 +6347,7 @@
     "$$H = \\nabla^2_\\theta E(\\theta^\\star;D)$$\n",
     "is the critical quantity here.  If $H$ is rank deficient, there exists one or more dimensions in $\\theta$ space that locally do not change the error function value.  Hence, a problem is non-identifiable when $H$ is rank deficient.\n",
     "\n",
+    "\n",
     "A common case of rank-deficiency is when there are fewer values in the dataset than unknown parameters: $N dim(\\mathbf{y}) < dim(\\mathbf{\\theta})$.  The solution is to add more data points.  Another common case is a geometric degeneracy.  This can happen when trying to estimate rotations from the 3D locations of two points: there is ambiguity in the axis of rotation.  Another geometric degeneracy is when trying to estimate both the size and distance of an object from a camera image alone.\n",
     "\n",
     "\n",
@@ -6358,9 +6359,11 @@
     "$$Var(\\theta) = \\lim_{N\\rightarrow \\infty} 1/N \\sum_{i=1}^N (\\theta_i - \\theta) (\\theta_i - \\theta)^T$$\n",
     "tells us how wildly the estimates deviate from the true value.  In particular, the square root of the diagonal of $Var(\\theta)$ is called the _standard error_ , and tells us how far $\\hat{\\theta}$ deviates from $\\theta$ on average.\n",
     "\n",
-    "Via a derivation beyond the scope of this course, if we knew that the probability of drawing a particular $y$ for a given $x$ is proportional to $exp(-0.5 e(y,f(x,\\theta))$, it can be shown that the inverse of the Hessian matrix gives an approximation of the covariance matrix:\n",
+    "We remark that error functions $E$ may often be interpreted as a negative log-likelihood of the observation probability: $E(\\theta) = - \\log P(D;\\theta)$.  For example, if $e$ is a squared error function it corresponds to the assumption that the probability of drawing a particular $y$ for a given $x$ is proportional to $exp(-0.5 e(y,f(x,\\theta))$. \n",
+    "In such cases, the optimum $\\theta^\\star$ is the maximum-likelihood estimate, and the hessian $H$ is an estimate of the Fisher Information Matrix (FIM).  \n",
+    "The theory relating the FIM to estimator error is quite deep, and has attracted much attention in statistics and information theory.  We will simply state that it can be shown, via a derivation beyond the scope of this book, that the inverse of the Hessian matrix gives an approximation of the covariance matrix:\n",
     "$$Var(\\theta) \\approx H^{-1}. $$\n",
-    "In other words, the \"sharper\" the error function at the optimum, the less variability we should expect to see in the parameter estimates.\n",
+    "In other words, the \"sharper\" the error function at the optimum, the less variability we should expect to see in the parameter estimates.  \n",
     "\n",
     "In general, the variance decreases proportionally to the inverse of $|D|$, which means the standard error decreases proportionally to the inverse square root of $|D|$.  Hence, to increase accuracy by a factor of 2, the size of the dataset must be increased by a factor of 4; to increase accuracy by a factor of 10, the size of the dataset must be increased by a factor of 100."
    ]
@@ -8785,7 +8788,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -8799,7 +8802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
