Updated klampt_jupyter install instructions

--- a/Book.ipynb
+++ b/Book.ipynb
@@ -232,11 +232,10 @@
     "To install Klampt-jupyter-extension, run\n",
     "\n",
     "```bash\n",
-    "git clone https://github.com/krishauser/Klampt-jupyter-extension.git\n",
-    "cd Klampt-jupyter-extension\n",
-    "make install-user\n",
-    "cd ..\n",
+    "pip install klampt_jupyter\n",
+    "jupyter nbextension enable --py klampt_jupyter\n",
     "```\n",
+    "You may need `--sys-prefix`, `--user`, or `--system` to the latter call.\n",
     "\n",
     "Next, to enable the best reading experience, we will install the `jupyter_contrib_nbextensions` package and enable the \"(some) LaTeX environments for Jupyter\", \"Table of Contents\", and \"Codefolding\" Jupyter Notebook plugins.  To do so, run\n",
     "\n",
