Added hierarchical sense-plan-act figure

--- a/AnatomyOfARobot.ipynb
+++ b/AnatomyOfARobot.ipynb
@@ -231,7 +231,8 @@
     "\n",
     "![fig:SensePlanAct](figures/introduction/sense_plan_act.png)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:SensePlanAct\">Figure 1</a>. The sense-plan-act framework structures how the robot's \"mind\" processes information from its sensors (Sense), calculates an action (Plan), and then performs the action using its body (Act).</div>\n",
+    "<div class=\"figcaption\"><a name=\"fig:SensePlanAct\">Figure 1</a>. The sense-plan-act framework structures how the robot's \"mind\" processes information from its sensors (Sense), calculates an action (Plan), and then performs the action using its body (Act).  In turn, the body interacts with the environment by applying physical forces and receiving data from sensing devices.\n",
+    "</div>\n",
     "\n",
     "******************\n",
     "\n",
@@ -319,9 +320,18 @@
     "\n",
     "In a complex intelligent robot, such as an autonomous vehicle, these components are individually quite sophisticated.  To optimize the behavior of each component requires deep knowledge, skills, and effort on the part of its engineering team.\n",
     "\n",
-    "Although these components are described as though they would be separate stages of a pipeline, they actually interact at multiple levels based on the timing requirements of behavioral decisions.  The planning component is usually broken down so that mission-level decisions are made at the highest layer, which are then broken into subtasks that should be achieved on the order of seconds to minutes, which are then finally broken down into continuous reference motions at sub-second granularity.  In some sense, the control component is the lowest level of the planning hierarchy.\n",
+    "Although these components are described as though they would be separate stages of a pipeline, they actually interact at multiple levels based on the timing requirements of behavioral decisions.  The planning component is usually broken down so that mission-level decisions are made at the highest layer, which are then broken into subtasks that should be achieved on the order of seconds to minutes, which are then finally broken down into continuous reference motions at sub-second granularity.  In a sense, the control component is the lowest level of the planning hierarchy.\n",
     "\n",
-    "The perception component may also be hierarchical as well. Some sensor signals, like joint encoder values, are processed minimally to be used by the controller.  Others, like vision data, are processed with computationally expensive, relatively slow operations like map-building and object recognition so that mission planning can make significant decisions about the robot's behavior.\n"
+    "The perception component may also be hierarchical as well. Some sensor signals, like joint encoder values, are processed minimally to be used by the controller.  Others, like vision data, are processed with computationally expensive, relatively slow operations like map-building and object recognition so that mission planning can make significant decisions about the robot's behavior.  A very common architecture is shown below: \n",
+    "\n",
+    "******************\n",
+    "\n",
+    "![fig:HierarchicalArchitecture](figures/introduction/hierarchical_architecture.png)\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:HierarchicalArchitecture\">Figure 2</a>. A hierarchical architecture is broken into perception vs decision-making components, which are vertically divided between slow (e.g., mapping, object recognition, planning, trajectory optimization) and fast (e.g., state estimation, tracking control) components.  Common inputs (sensors and input devices) and outputs (actuators and displays) also operate at different rates.\n",
+    "</div>\n",
+    "\n",
+    "******************\n"
    ]
   },
   {
@@ -332,13 +342,20 @@
     "\n",
     "In contrast to the perception-planning-control pipeline, the philosophy of *end-to-end* behavior attempts to compress the entire Plan component into a single monolithic function.  Because robot behavior is usually too complex to tune by hand, this philosophy is usually approached via the perspective of *end-to-end learning*, where the robot itself adjusts the behavior of the Plan component to achieve better outcomes.  Recently, this is becoming more a plausible approach given the success of deep neural networks in computer vision and related machine learning fields.\n",
     "\n",
-    "However, there is still a long way to go before end-to-end robots are practical, and in fact there are *no commercially-significant robots in the world today that are developed using the end-to-end approach*.  Why might this be the case?  One may be that human scientists and engineers have developed exceptionally precise models for robot behavior that can't be matched using model-free approaches.  Another reason may be that the development process for the classical pipeline does a better job of exploiting the ingenuity of human engineering teams by imposing clear roles, responsibilities, and performance metrics for each component.  Indeed, it is very hard to determine why a system built entirely on machine learning made a mistake, which makes debugging and development much more difficult.  A final reason could be that the machine learning community simply does not yet have the right model for robotic cognition, and some breakthrough awaits just around the corner!  (Personally speaking, I enjoy the robot engineering process, and hope for the sake of myself, my colleagues, and my students that this latter scenario does not occur any time soon.)\n"
+    "However, there is still a long way to go before end-to-end robots are practical, and in fact there are *no commercially-significant robots in the world today that are developed using an end-to-end approach*.  Why might this be the case?  One may be that human scientists and engineers have developed exceptionally precise models for robot behavior that can't be matched using model-free approaches.  Another reason may be that the development process for the classical pipeline does a better job of exploiting the ingenuity of human engineering teams by imposing clear roles, responsibilities, and performance metrics for each component.  Indeed, it is very hard to determine why a system built entirely on machine learning made a mistake, which makes debugging and development much more difficult.  A final reason could be that the machine learning community simply does not yet have the right model for robotic cognition, and some breakthrough awaits just around the corner!  (Personally speaking, I enjoy the robot engineering process, and hope for the sake of myself, my colleagues, and my students that this latter scenario does not occur any time soon.)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -352,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.11.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
