New instructions for Jupyter Lab users

--- a/Book.ipynb
+++ b/Book.ipynb
@@ -210,6 +210,7 @@
     "*Jupyter cons*\n",
     "\n",
     "- Need to install on your local machine.  Possible compability issues with other Python installs, e.g., Anaconda.\n",
+    "- Newer versions of Jupyter Lab don't support equation numbering and do not support older extensions that provide equation numbering. \n",
     "\n",
     "*Jupyter Installation*:\n",
     "\n",
@@ -219,25 +220,34 @@
     "  * Python 3.5+ and [Jupyter Notebook](http://jupyter.org), or a Python distribution like Anaconda.\n",
     "  * [Klamp't](https://github.com/krishauser/Klampt) 0.8.5+ Python API.\n",
     "  * [Klampt-jupyter-extension](http://github.com/krishauser/Klampt-jupyter-extension) for live Klamp't windows.\n",
-    "  * [jupyter_contrib_nbextensions](https://github.com/ipython-contrib/jupyter_contrib_nbextensions) for LaTeX and table of content support. \n",
     "  \n",
-    "On most systems (Linux, Windows, OSX), the Klamp't Python API can be installed using `pip` as follows:\n",
+    "On most systems (Linux, Windows, OSX), the Klamp't Python API and Jupyter extension can be installed using `pip` as follows:\n",
     "\n",
     "```bash\n",
     "pip install klampt\n",
+    "pip install klampt_jupyter\n",
     "```\n",
     "\n",
     "(Note that the Klamp't source is the most up-to-date way to install Klamp't, and is mostly pain-free on Linux and OSX platforms. )\n",
     "\n",
-    "To install Klampt-jupyter-extension, run\n",
+    "Then, to enable Klampt-jupyter-extension on Jupyterlab, run\n",
     "\n",
     "```bash\n",
-    "pip install klampt_jupyter\n",
+    "jupyter labextension enable klampt_jupyter\n",
+    "```\n",
+    "\n",
+    "#### Classical Jupyter notebook\n",
+    "\n",
+    "To use classical Jupyter Notebook, install all items mentioned above, as well as [jupyter_contrib_nbextensions](https://github.com/ipython-contrib/jupyter_contrib_nbextensions) for LaTeX and table of content support. \n",
+    "  \n",
+    "Then run\n",
+    "```bash\n",
     "jupyter nbextension enable --py klampt_jupyter\n",
     "```\n",
+    "\n",
     "You may need `--sys-prefix`, `--user`, or `--system` to the latter call.\n",
     "\n",
-    "Next, to enable the best reading experience, we will install the `jupyter_contrib_nbextensions` package and enable the \"(some) LaTeX environments for Jupyter\", \"Table of Contents\", and \"Codefolding\" Jupyter Notebook plugins.  To do so, run\n",
+    "To enable the best reading experience on Jupyter Notebook, we will install the `jupyter_contrib_nbextensions` package and enable the \"(some) LaTeX environments for Jupyter\", \"Table of Contents\", and \"Codefolding\" Jupyter Notebook plugins.  To do so, run\n",
     "\n",
     "```bash\n",
     "pip install jupyter_contrib_nbextensions\n",
@@ -255,12 +265,13 @@
     "git clone https://github.com/krishauser/RoboticSystemsBook\n",
     "```\n",
     "\n",
-    "3. Run Jupyter Notebook from the RoboticSystemsBook directory using the console command:\n",
+    "3. Run Jupyterlab or Jupyter Notebook from the RoboticSystemsBook directory using the console command:\n",
     "\n",
     "```bash\n",
     "cd RoboticSystemsBook\n",
-    "jupyter notebook\n",
+    "jupyter lab\n",
     "```\n",
+    "or `jupyter notebook` if you are using classical Jupyter Notebook.\n",
     "\n",
     "This will launch a web browser interface to Jupyter.\n",
     "\n",
