Added systems engineering chapter

--- a/Book.ipynb
+++ b/Book.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "* Section VII. Robotic Systems in Practice **incomplete**\n",
     "   * Chapter 26. System integration\n",
-    "   * Chapter 27. Systems engineering\n",
+    "   * [Chapter 27. Systems engineering](SystemsEngineering.ipynb) **text 30% complete, figures 10% complete**\n",
     "   * Chapter 28. Human-robot interaction\n",
     "   * Chapter 29. Applications\n",
     "\n",
