Added system integration and engineering material

--- a/Book.ipynb
+++ b/Book.ipynb
@@ -68,7 +68,7 @@
     "  * Chapter 25. Reinforcement learning **incomplete**\n",
     "\n",
     "* Section VII. Robotic Systems in Practice **incomplete**\n",
-    "   * Chapter 26. System integration\n",
+    "   * [Chapter 26. System integration](SystemIntegration.ipynb) **text 40% complete**\n",
     "   * [Chapter 27. Systems engineering](SystemsEngineering.ipynb) **text 30% complete, figures 10% complete**\n",
     "   * Chapter 28. Human-robot interaction\n",
     "   * Chapter 29. Applications\n",
