--- a/SystemsEngineering.ipynb
+++ b/SystemsEngineering.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Systems Engineering"
+    "# Section VII. ROBOTIC SYSTEMS IN PRACTICE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 27. Systems Engineering"
    ]
   },
   {
@@ -406,7 +413,7 @@
     "\n",
     "Organizing code is the single most important imperative of software engineering.\n",
     "\n",
-    "Separation between algorithms, settings, models, data, logs, executors, tests, and setup.\n",
+    "Separation between algorithms, integration wrappers, settings, models, data, logs, executors, tests, and setup.\n",
     "\n",
     "### Levels of component maturity\n",
     "\n",
