Updated system integration and engineering

--- a/Book.ipynb
+++ b/Book.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "University of Illinois at Urbana-Champaign\n",
     "\n",
-    "Last update:10/5/2023"
+    "Last update: 7/6/2024"
    ]
   },
   {
@@ -43,7 +43,7 @@
     "\n",
     "  * [Chapter 8. What is motion planning?](WhatIsMotionPlanning.ipynb)\n",
     "  * [Chapter 9. Motion planning in simple geometric spaces](GeometricMotionPlanning.ipynb) \n",
-    "  * [Chapter 10. Motion planning in higher dimensions](MotionPlanningHigherDimensions.ipynb) **98% complete**\n",
+    "  * [Chapter 10. Motion planning in higher dimensions](MotionPlanningHigherDimensions.ipynb)\n",
     "  * [Chapter 11. Planning with dynamics and uncertainty](PlanningWithDynamicsAndUncertainty.ipynb) **text 98% complete, figures 90% complete**\n",
     "  * [Chapter 12. Advanced topics in planning](AdvancedTopicsInPlanning.ipynb) **15% complete**\n",
     "\n",
@@ -68,8 +68,8 @@
     "  * Chapter 25. Reinforcement learning **incomplete**\n",
     "\n",
     "* Section VII. Robotic Systems in Practice **incomplete**\n",
-    "   * [Chapter 26. System integration](SystemIntegration.ipynb) **text 40% complete**\n",
-    "   * [Chapter 27. Systems engineering](SystemsEngineering.ipynb) **text 30% complete, figures 10% complete**\n",
+    "   * [Chapter 26. System integration](SystemIntegration.ipynb) **text 70% complete**\n",
+    "   * [Chapter 27. Systems engineering](SystemsEngineering.ipynb) **text 60% complete, figures 10% complete**\n",
     "   * Chapter 28. Human-robot interaction\n",
     "   * Chapter 29. Applications\n",
     "\n",
